tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__ItemResponderChi-AAAAAAAAAAAAAAAAAAAGWw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1627,
  "prerequisites": [
    1626
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This chip also stores items in connected inventory. It designates a storage for items that are set in the filter of this chip. They do not actively request for items, they only serve as a destination for items to go. You can open up the menu by right-clicking the chip. There you can set which items should it accept and the priority. Items will go to item responders with higher priority first.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Item Responder Chip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1626
  ],
  "rewards": [],
  "tasks": []
}
