tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__Junctions-AAAAAAAAAAAAAAAAAAAGWA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1624,
  "prerequisites": [
    1623
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So how do we deal with junctions then? We use these pipes. They are smart and they will send everything where it needs to go, so if you make a junction make sure you put this pipe there.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Junctions",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1623
  ],
  "rewards": [],
  "tasks": []
}
