tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__LetsGetSomePipes-AAAAAAAAAAAAAAAAAAAGVw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1623,
  "prerequisites": [
    68
  ],
  "properties": {
    "auto_claim": false,
    "desc": "First we're gonna need some pipes to connect everything. Do not use these pipes in junctions or the items will choose which path to go at random and you don't want that.\n\n[note]Keep in mind PR automation is laggy, so don't use it more than the minimum you can get away with on servers, wait until AE2 for that. In SP, do what you want, but keep in mind that AE2 is way more powerful.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Let's Get Some Pipes",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    68
  ],
  "rewards": [],
  "tasks": []
}
