tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__MoreTreeTypes-AAAAAAAAAAAAAAAAAAAGDw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1551,
  "prerequisites": [
    112,
    1148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The standard wood cutter can only chop down (and replant) vanilla trees. If you want to use saplings from other mods however this add-on will come in handy. Who knows - maybe you're tired of clicking rubber trees with a treetap.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "More Tree Types",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    112,
    1148
  ],
  "rewards": [],
  "tasks": []
}
