tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__RequestPipe-AAAAAAAAAAAAAAAAAAAGYg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1634,
  "prerequisites": [
    1631
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This pipe lets you request stuff from the system. It shows all items that are available thanks to broadcast chips and even stuff that can be crafted thanks to crafting chips.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Request Pipe",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1631
  ],
  "rewards": [],
  "tasks": []
}
