tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__StoringtheFluids-AAAAAAAAAAAAAAAAAAAGZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1637,
  "prerequisites": [
    547,
    1636
  ],
  "properties": {
    "auto_claim": false,
    "desc": "First we should make a place to store all the fluids we'll use.\n\nIf you're interested what they'll be used for:\n1 for oxygen\n1 for hydrogen\n1 for sulfuric acid",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Storing the Fluids",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    547,
    1636
  ],
  "rewards": [],
  "tasks": []
}
